getting pokemon to display
