# swagger.json
@@ -8,6 +8,7 @@
   "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
+    "https",
     "http"
   ],
   "paths": {
@@ -24,10 +25,20 @@
         }
       }
     },
-    "/users/": {
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/pokemon/": {
       "get": {
         "tags": [
-          "Users"
+          "pokemon"
         ],
         "description": "",
         "produces": [
@@ -36,12 +47,15 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
       "post": {
         "tags": [
-          "Users"
+          "pokemon"
         ],
         "description": "",
         "parameters": [
@@ -73,6 +87,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -80,10 +97,10 @@
         }
       }
     },
-    "/users/{id}": {
+    "/pokemon/{id}": {
       "get": {
         "tags": [
-          "Users"
+          "pokemon"
         ],
         "description": "",
         "produces": [
@@ -100,12 +117,15 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
       "put": {
         "tags": [
-          "Users"
+          "pokemon"
         ],
         "description": "",
         "parameters": [
@@ -143,6 +163,12 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -151,7 +177,7 @@
       },
       "delete": {
         "tags": [
-          "Users"
+          "pokemon"
         ],
         "description": "",
         "parameters": [
@@ -165,6 +191,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
